# my-site-server

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: crud.py  database.py  globals.py  logger.py  mailer.py  main.py  models.py  schemas.py  socket_test.py  telegram_bot.py
app/routers/: chat.py  common.py  email.py  portfolio.py  project.py  telegram_hook.py  websocket.py
app/utils/: connection_manager.py  session.py
