[tool.poetry]
name = "my-site-server"
version = "0.1.0"
description = ""
authors = ["AmadeusJ <dawoonjung1026@gmail.com>"]
readme = "README.md"
packages = [{include = "my_site_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.1"
aiomysql = "^0.2.0"
python-dotenv = "^1.0.1"
websockets = "^14.1"
greenlet = "^3.1.1"
cryptography = "^44.0.0"
pydantic = "^2.10.3"
python-telegram-bot = "^21.8"
werkzeug = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
